# cookiecutter-python-project

./: cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .env.example  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
